crates/rattler/src/install/snapshots/rattler__install__clobber_registry__tests__transaction_with_clobber-3.snap
---
source: crates/rattler/src/install/clobber_registry.rs
expression: prefix_record_clobber_2.files
---
- __clobbers__/clobber-2/another-clobber.txt
- __clobbers__/clobber-2/clobber.txt
