crates/rattler/src/install/snapshots/rattler__install__clobber_registry__tests__transaction_with_clobber-5.snap
---
source: crates/rattler/src/install/clobber_registry.rs
expression: prefix_record_clobber_2.files
---
- another-clobber.txt
- clobber.txt
