crates/rattler/src/install/snapshots/rattler__install__clobber_registry__tests__transaction_with_clobber-7.snap
---
source: crates/rattler/src/install/clobber_registry.rs
expression: prefix_record_clobber_3.paths_data
---
paths_version: 1
paths:
  - _path: __clobbers__/clobber-3/another-clobber.txt
    original_path: another-clobber.txt
    path_type: hardlink
    sha256: b4945e948f71c508f15cb2ca4bf0db206f4ce0fbbe674a6171d15b9e0c860f57
    size_in_bytes: 10
  - _path: __clobbers__/clobber-3/clobber.txt
    original_path: clobber.txt
    path_type: hardlink
    sha256: b4945e948f71c508f15cb2ca4bf0db206f4ce0fbbe674a6171d15b9e0c860f57
    size_in_bytes: 10
